Updated dependencies and refactored code accordingly.